[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/TextureButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=2]

[node name="MainMenu" type="Node"]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.90259
margin_right = -1.90259
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 476.0
margin_top = 143.0
margin_right = 548.0
margin_bottom = 157.0
text = "BEST GAME"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 304.0
margin_right = 1024.0
margin_bottom = 604.0
rect_min_size = Vector2( 0, 300 )
alignment = 1

[node name="Start" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 116.0
margin_bottom = 136.0
rect_min_size = Vector2( 0, 20 )
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Options")
text = "Start"
arrow_margin_from_center = 38

[node name="Options" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 140.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 20 )
focus_neighbour_top = NodePath("../Start")
focus_neighbour_bottom = NodePath("../Exit")
text = "Options"
arrow_margin_from_center = 50

[node name="Exit" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 164.0
margin_bottom = 184.0
rect_min_size = Vector2( 0, 20 )
focus_neighbour_top = NodePath("../Options")
focus_neighbour_bottom = NodePath("../Start")
text = "Exit"
arrow_margin_from_center = 35
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Start" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Options" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Exit" to="." method="_on_TextureButton3_pressed"]
